# kuplift

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
Kuplift/: BayesianDecisionTree.py  BayesianRandomForest.py  BinaryDiscretizationFunctions.py  FeatureSelection.py  HelperFunctions.py  Node.py  Tree.py  UMODL_SearchAlgorithm.py  UnivariateEncoding.py  __init__.py
_sources/: index.rst.txt
_static/: documentation_options.js
data/: data.csv  data_uplift_missing.csv  dataset.csv  synthetic_10k.txt  synthetic_15k_concatenated.txt  synthetic_5000.txt  zenodo_sample.csv
docs/: Kuplift.rst  conf.py  index.rst  modules.rst
docs/source/: conf.py  (+1 more)
documentation/: index.html
examples/: README.md  examples.md  multi_treatment_decision_tree.py  multi_treatment_random_forest.py  multi_treatment_univariate_encoding.ipynb  multi_treatment_univariate_encoding.py  optimized_univariate_encoding.ipynb  optimized_univariate_encoding.py  tutorial_kuplift.ipynb
get_started/: index.html
kuplift/: BayesianDecisionTree.py  BayesianRandomForest.py  BinaryDiscretizationFunctions.py  FeatureSelection.py  HelperFunctions.py  KWStat.py  Node.py  OptimizedUnivariateEncoding.py  TODO.md  Tree.py  UMODL_SearchAlgorithm.py  UnivariateEncoding.py  __init__.py  bayesian_decision_tree.py  bayesian_decision_tree_v2.py  bayesian_random_forest.py  binary_discretization_functions.py  dt_decision_binary_tree_cost_v3.py  dt_decision_tree_cost_v3.py  dt_decision_tree_node_split_v3.py  dt_mt_decision_binary_tree_cost.py  dt_mt_decision_tree_cost.py  dt_mt_decision_tree_node_split.py  encoding_selector_v3.py  feature_selection.py  helperclasses.py  helperfunctions.py  kwstat_v3.py  leaf_selection_strategies_v3.py  mt_decision_binary_tree_cost.py  mt_decision_tree.py  mt_decision_tree_cost.py  mt_decision_tree_node_split.py  mt_encoding_selector.py  mt_kwstat.py  mt_leaf_selection_strategies.py  mt_node.py  mt_random_forest.py  mt_tree.py  mt_univariate_encoding.py  (+24 more)
references/: index.html
test/: __init__.py  conftest.py  doctests.py  list.txt  test.py  test_BayesianDecisionTree.py  test_BayesianRandomForest.py  test_FeatureSelection.py  test_OptimizedUnivariateEncoding.py  test_UnivariateEncoding.py  test_UnvariateEncoding.py  test_bayesian_decision_tree.py  test_bayesian_random_forest.py  test_feature_selection.py  (+4 more)
(+25 files in other folders)
