[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kuplift"
version = "0.0.10"
description = "A User Parameter-free Bayesian Framework for Uplift Modeling"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
maintainers = [{name="The Khiops Team", email="khiops.team@orange.com"}]
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "sortedcontainers>=2.4.0",
    "scikit-learn>=1.6.1",
    "khiops>=10.3.2.1",
    "umodl>=0.0.26"
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.3.0",
    "furo>=0.22.2",
    "numpydoc>=1.5.0",
    "sphinx-copybutton>=0.5.0"
]
test = [
    "pytest>=8.4.2"
]

[tool.setuptools]
packages = ["kuplift"]
