[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kuplift"
version = "0.0.17.dev0"
description = "A User Parameter-free Bayesian Framework for Uplift Modeling"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
maintainers = [{name="The Khiops Team", email="khiops.team@orange.com"}]
dependencies = [
    "numpy>=2.0.2,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "sortedcontainers>=2.4.0,<3.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "khiops>=11.0.0.3,<12.0.0.0",
    "umodl>=0.0.28"
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.3.0",
    "furo>=0.22.2",
    "numpydoc>=1.5.0",
    "sphinx-copybutton>=0.5.0",
    "tomlkit>=0.14.0"
]
test = [
    "pytest>=8.4.2"
]
notebook = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8"
]

[tool.setuptools]
packages = ["kuplift"]
